fix: change z-index in modals & snackbar to always have snackbars above (#1188)

--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -22,3 +22,10 @@
 .checkbox {
   animation: none;
 }
+
+/* Override default z-index from daisy ui to allow content "on top"
+ * e.g. snackbars
+ */
+.modal {
+  z-index: 40;
+}
